# aoc2023

./: .gitignore  Cargo.toml  README.md
aoc/: Cargo.toml
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/src/: main.rs
day05/src/: main.rs
day05vis/: Cargo.toml
day05vis/src/: main.rs
day06/src/: main.rs
day07/src/: hands.rs  main.rs
day08/src/: main.rs
day09/src/: main.rs
day10/src/: main.rs
day10vis/: Cargo.toml
day10vis/src/: main.rs
day14vis/: Cargo.toml
day16vis/: Cargo.toml
day17/: Cargo.toml
day17vis/: Cargo.toml
day18vis/: Cargo.toml
day20vis/: Cargo.toml
day21/: Cargo.toml
day22/: Cargo.toml
day23/: Cargo.toml
day23vis/: Cargo.toml
day24/: Cargo.toml
day25/: Cargo.toml
day25vis/: Cargo.toml
stats/: day01-linux.txt  day01-macos.txt  day02-linux.txt  day02-macos.txt  day03-linux.txt  day03-macos.txt  day04-linux.txt  day04-macos.txt  day05-linux.txt  day05-macos.txt  day06-linux.txt  day06-macos.txt  day07-linux.txt  day07-macos.txt  day08-linux.txt  day08-macos.txt  day09-linux.txt  day09-macos.txt  day10-linux.txt  day10-macos.txt  day10vis-linux.txt  day10vis-macos.txt  day11-linux.txt  day11-macos.txt  day12-linux.txt  day12-macos.txt  day13-linux.txt  day13-macos.txt  day14-linux.txt  day14-macos.txt  day14vis-linux.txt  day14vis-macos.txt  day15-linux.txt  day15-macos.txt  day16-linux.txt  day16-macos.txt  day16vis-linux.txt  day16vis-macos.txt  day17-linux.txt  day17-macos.txt  (+26 more)
template/: Cargo.toml
vis/: day05-2.html  day05ex.html  day20.dot  day23-2.dot  day25.dot  day25ex.dot
(+23 files in other folders)
