[workspace.package]
edition = "2024"
authors = ["Andrew Ward (andy.ward.uk@gmail.com)"]

[workspace]
resolver = "2"

members = [
    "aoc",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day10vis",
    "day11",
    "day12",
    "day13",
    "day14",
    "day14vis",
    "day15",
    "day16",
    "day17",
    "day17vis",
#    "day18",
#    "day19",
#    "day20",
#    "day21",
#    "day22",
#    "day23",
#    "day24",
#    "day25",
]

[profile.release]
debug = true
lto = true
